done my section

--- a/index.html
+++ b/index.html
@@ -13,11 +13,28 @@
     <header>
         <nav>
             <!--^type here -->
+            <div class="nav_m">
+                <a href="" class="array_m">array.</a>
+                <div class="nav2_m">
+                    <a href="">Products</a>
+                    <a href="">Features</a>
+                    <a href="">Reviews</a>
+                    <a href="">Pricing</a>
+                    <button class="button_m"><a href="#">Singn Up</a> </button>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
         <section>
             <!-- ^type here -->
+            <div class="section_m">
+                <img src="./public/image/for_section_mourad.png" alt=""><br>
+                <h1><b>Multi purpose business landing page</b></h1><br>
+                <h3>software and analytics services will render your chunks into meaningful data.</h3><br>
+                <button class="button_m button2_m"><a href="#">REGISTER NOW</a> </button><br>
+                <img src="./public/image/emage_morad2.png" alt="" class="image_morad"><br>
+            </div>
         </section>
         <!-- ^end mourad -->
 
