done my section

--- a/index.html
+++ b/index.html
@@ -41,9 +41,112 @@
         <!-- !hi_yahia -->
         <section>
             <!-- !type here -->
+            <div class="first_sec_y">
+                <div class="text_1_y">
+                    <h3>Welcome to array, where data matters.</h3><br>
+                    <p>we'll Deliver yhe best ideas on the topics you care about most
+                        <br>
+                        straight to your homepages, app, or inbox
+                    </p>
+                </div>
+                <div class="small_texts_y">
+                    <div class="first_part">
+                        <div class="parts_y">
+                            <img src="./public/image/icon_1.png" alt="">
+                            <h4>Responsive</h4>
+                            <p>
+                                Deliver the best stories and ideas on
+                                <br>the topics you care about most
+                                <br>straight to you
+                            </p>
+                        </div>
+                        <div class="parts_y">
+                            <img src="./public/image/icon_2.png" alt="">
+                            <h4>Responsive</h4>
+                            <p>
+                                Deliver the best stories and ideas on
+                                <br>the topics you care about most
+                                <br>straight to you
+                            </p>
+                        </div>
+                        <div class="parts_y">
+                            <img src="./public/image/icon_3.png" alt="">
+                            <h4>Responsive</h4>
+                            <p>
+                                Deliver the best stories and ideas on
+                                <br>the topics you care about most
+                                <br>straight to you
+                            </p>
+                        </div>
+                    </div>
+                    <div class="second_part">
+                        <div class="parts_y">
+                            <img src="./public/image/icon_4.png" alt="">
+                            <h4>User Friendly</h4>
+                            <p>
+                                Deliver the best stories and ideas on
+                                <br>the topics you care about most
+                                <br>straight to you
+                            </p>
+                        </div>
+                        <div class="parts_y">
+                            <img src="./public/image/icon_5.png" alt="">
+                            <h4>AI Algorithms</h4>
+                            <p>
+                                Deliver the best stories and ideas on
+                                <br>the topics you care about most
+                                <br>straight to you
+                            </p>
+                        </div>
+                        <div class="parts_y">
+                            <img src="./public/image/icon_6.png" alt="">
+                            <h4>Built-in Camera</h4>
+                            <p>
+                                Deliver the best stories and ideas on
+                                <br>the topics you care about most
+                                <br>straight to you
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section>
             <!-- !type here -->
+            <div class="second_sec_y">
+                <div>
+                    <h3>Built better landing pages</h3>
+                    <p>When you get straight to the point the presentation looks attractive on your
+                        <br>web pages. Keep it simple and clean always.
+                    </p>
+                </div>
+                <div class="part_1">
+                    <div>
+                        <img src="./public/image/for_section_yahia_1.png" alt="">
+                    </div>
+                    <div class="parag_y">
+                        <h4>Dynamic charts</h4>
+                        <p>When you get straight to the
+                            <br>point the presentation looks
+                            <br>attractive on your web pages
+                        </p>
+                        <a href=""><strong><span class="link_y">Know</span> more</strong></a>
+                    </div>
+                </div>
+                <div class="part_2">
+                    <div class="parag_y">
+                        <h4>Mobile Analytics</h4>
+                        <p>When you get straight to the
+                            <br>point the presentation looks
+                            <br>attractive on your web pages
+                        </p>
+                        <a href=""><strong><span class="link_y">Know</span> more</strong></a>
+                    </div>
+                    <div>
+                        <img src="./public/image/for_section_yahia_2.png" alt="">
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- !end yahia -->
 
