--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <section>
             <!-- !type here -->
             <div class="second_sec_y">
-                <div>
+                <div class="titre_y">
                     <h3>Built better landing pages</h3>
                     <p>When you get straight to the point the presentation looks attractive on your
                         <br>web pages. Keep it simple and clean always.
